node-backend/node-k8s-resource-defins/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend
  namespace: ai-tools
  labels:
    app: node-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend
  template:
    metadata:
      labels:
        app: node-backend
    spec:
      containers:
        - name: node-backend
          # Remeber to change to your own Docker hub repo
          image: evanhuang7/ai-tools-node-backend:developing
          ports:
            - containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3000
          resources:
            limits:
              memory: "120Mi"
              cpu: "60m"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
